--- a/practice/day3/3.html
+++ b/practice/day3/3.html
@@ -6,39 +6,32 @@
     <title>my first website</title>
 
 </head>
-    <body>
-        <!--this is an best wedsite-->
-        
-        <h1> THIS IS MY FIRST WEB SITE</h1>
-        <br>
-        <hr>
-<h1>i love snooker</h1>
-<br>
-<h2>i love snooker</h2>
-<br>
-<h3>i love snooker</h3>
-<br>
-<h4>i love snooker</h4>
-<br>
-<h5>i love snooker</h5>
-<br>
-<h6>i love snooker</h6>
-<br>
-<p>IAM A GOOD SNOOKER PLAYER.SNOOKER IS AN HARD GAME.SNOOKR IS A GAME INVOLVING BALLS ON A LARGE TABLE. THE PLAYER USE LONG STICK CALLED CUE STICK,AND SCORE POINTS BY KNOVKING COLOURD BALLS INTO THE POCKETS AT THE SIDES OF THE TABLE
+
+<body>
+    <!--this is an best website-->
+    <h1> THIS IS MY FIRST WEB SITE</h1>
+    <br>
+    <hr>
+    <h1>i love snooker</h1>
+    <br>
+    <h2>i love snooker</h2>
+    <br>
+    <h3>i love snooker</h3>
+    <br>
+    <h4>i love snooker</h4>
+    <br>
+    <h5>i love snooker</h5>
+    <br>
+    <h6>i love snooker</h6>
+    <br>
+    <p>
+        IAM A GOOD SNOOKER PLAYER.SNOOKER IS AN HARD GAME.SNOOKR IS A GAME INVOLVING BALLS ON A LARGE TABLE. THE PLAYER
+        USE LONG STICK CALLED CUE STICK,AND SCORE POINTS BY KNOVKING COLOURD BALLS INTO THE POCKETS AT THE SIDES OF THE
+        TABLE
+    </p>
     <br>
     <br>
     <br>
-    
-
-</p>
-<P>IAM A GOOD SNOOKER PLAYER IS AN HARD GAME .SNOOKER IS A GAME INVOLVING BALLS ON A LARGE TABLE</P>
-
-
-    </body>
-
-
+    <P>IAM A GOOD SNOOKER PLAYER IS AN HARD GAME .SNOOKER IS A GAME INVOLVING BALLS ON A LARGE TABLE</P>
+</body>
 </html>
-
-
-
-
